Fixes #30 Menu getting too wide
Use normal white-space on dropdown menu links

--- a/assets/sass/partials/_menu.scss
+++ b/assets/sass/partials/_menu.scss
@@ -9,6 +9,11 @@
       display: block;
       float: none;
       position: relative;
+      > li {
+        > a {
+          white-space: normal;
+        }
+      }
     }
   }
 }
